# russia_heatmap

./: .gitignore  README.md  colormap.csv  main.py  main.spec  main_one_file.spec  pyproject.toml  russia_heatmap.ipynb  russia_regions.parquet
RF/: colormap.csv  russiageojson.shp
app/: factory.py  main.py  pyinstaller.py
app/callbacks/: __init__.py  layout.py  scatter_action.py  select_file.py  update_map.py
app/core/: __init__.py  colormap.py  error_window.py  init_dialog_frame.py  map.py  map_of_russia.py  utils.py
app/map_data/: additional_data.xlsx  russia_regions.parquet
app/static/: table.xlsx
core/: init_dialog_frame.py  map_of_russia.py  utils.py
russia_heatmap/: main.py
russia_heatmap/assets/: index.css
russia_heatmap/callbacks/: __init__.py  layout.py  select_file.py  update_map.py
russia_heatmap/callbacks/actions/: __init__.py  open_presentation_dir.py  scatter_action.py  select_file.py  update_map.py
russia_heatmap/core/: map.py  map_of_russia.py  map_utils.py  utils.py
russia_heatmap/map_data/: additional_data.xlsx  russia_regions.parquet
russia_heatmap/static/: new_data.xlsx
