[tool.poetry]
name = "russia-heatmap"
version = "0.1.0"
description = ""
authors = ["Nikolay <diskream77@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
geopandas = "^0.14.0"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
plotly = "^5.17.0"
pyarrow = {version = "^13.0.0", extras = ["parquet"]}
dash = "^2.14.1"
dash-bootstrap-components = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
nuitka = "^1.8.4"
jupyter = "^1.0.0"
black = "^23.9.1"
pyside6 = "^6.6.0"
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["I", "F", "E", "S", "W", "C", "T", "Q"]
ignore = ['C408']

fixable = ["ALL"]

ignore-init-module-imports = true

# Same as Black.
line-length = 120

target-version = "py311"

[tool.ruff.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402", 'F401']

[tool.black]
line-length = 120